# CrazyRooks

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
doc/: class_diagram.puml  description.txt
include/: AbstractFigure.h  Chessboard.h  RookFigure.h  Square.h  TowerFigure.h
include/CrazyRooksLib/: AbstractFigure.h  Chessboard.h  RookFigure.h  Square.h  SquareCoordinates.h
src/: AbstractFigure.cpp  Chessboard.cpp  RookFigure.cpp  Square.cpp  TowerFigure.cpp  main.cpp
src/CrazyRooksLib/: AbstractFigure.cpp  Chessboard.cpp  RookFigure.cpp  Square.cpp  SquareCoordinates.cpp
test/: CMakeLists.txt  ChessboardTest.cpp  DrawBoardTest.cpp  TowerFigureTest.cpp
